(Issue #42) Create DataShape.[cpp|h].
Also create new site to build runtime on Johann's notebook.

--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -16,6 +16,7 @@ SRCS_BASE       = \
     $(SRCDIR)/FArray3D.cpp \
     $(SRCDIR)/FArray2D.cpp \
     $(SRCDIR)/FArray1D.cpp \
+    $(SRCDIR)/DataShape.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
     $(SRCDIR)/Runtime.cpp \
