(Issue #43) Continue deconstructing current task function/data packet.  The task function now just performs the minimum tasks needed and logs a message.  In particular, it doesn't run any computation and therfore does not use OpenACC. Since there is no code that frees extra async queues, the data packet no longer acquires these.
Runs on Summit.  The TF message appears in sedov.log many times.

--- a/test/Sedov/gpu/variant3/gpuonly/Makefile.test
+++ b/test/Sedov/gpu/variant3/gpuonly/Makefile.test
@@ -25,18 +25,18 @@ SRCS_TEST = \
     $(SEDOVDIR)/hy_computeFluxesHll.cpp \
     $(SEDOVDIR)/hy_updateSolutionHll.cpp \
     $(SEDOVDIR)/Hydro_advanceSolutionHll_tile_cpu.cpp \
-	$(SEDOVGPUDIR)/hy_computeSoundSpeedHll_oacc_summit.cpp \
-	$(SEDOVGPUDIR)/hy_computeFluxesHll_X_oacc_summit.cpp \
-	$(SEDOVGPUDIR)/hy_computeFluxesHll_Y_oacc_summit.cpp \
-	$(SEDOVGPUDIR)/hy_computeFluxesHll_Z_oacc_summit.cpp \
-	$(SEDOVGPUV3DIR)/hy_updateSolutionHll_oacc_summit.cpp \
-	$(SEDOVGPUDIR)/Eos_idealGammaDensIe_oacc_summit.cpp \
 	$(SEDOVDIR)/Io.cpp \
 	$(SEDOVDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
 	$(SEDOVDIR)/Driver_data.cpp \
 	$(SEDOVGPUV3DIR)/DataPacket_Hydro_gpu_3.cpp \
 	$(SEDOVGPUV3DIR)/Hydro_advanceSolutionHll_packet_oacc_summit_3.cpp \
 	$(TESTDIR)/sedov_gpuonly_3.cpp
+#	$(SEDOVGPUDIR)/hy_computeSoundSpeedHll_oacc_summit.cpp \
+#	$(SEDOVGPUDIR)/hy_computeFluxesHll_X_oacc_summit.cpp \
+#	$(SEDOVGPUDIR)/hy_computeFluxesHll_Y_oacc_summit.cpp \
+#	$(SEDOVGPUDIR)/hy_computeFluxesHll_Z_oacc_summit.cpp \
+#	$(SEDOVGPUV3DIR)/hy_updateSolutionHll_oacc_summit.cpp \
+#	$(SEDOVGPUDIR)/Eos_idealGammaDensIe_oacc_summit.cpp \
 
 CU_SRCS = \
 	$(SRCDIR)/CudaBackend.cu \
