Include tile-specific data in packet and have Fortran routine print data in GPU.

--- a/sites/summit/Makefile.site
+++ b/sites/summit/Makefile.site
@@ -23,8 +23,8 @@ CXXFLAGS_PROD    = -O3 -m64
 CXXFLAGS_DEBUG   = -g -O0 -DGRID_LOG -m64
 
 F03COMP          = mpif90
-F03FLAGS_PROD    = -O3 -m64
-F03FLAGS_DEBUG   = -g -O0 -m64
+F03FLAGS_PROD    = -O3 -i4 -r8 -m64
+F03FLAGS_DEBUG   = -g -O0 -i4 -r8 -m64
 
 CUCOMP       = nvcc
 CUFLAGS_PROD = -ccbin=pgc++ -O3 -m64 -gencode arch=compute_70,code=sm_70
