(Issue #43) Put kernel is a separate Fortran subroutine.  This splits the gang and vector directives across files.

--- a/test/Sedov/gpu/variant3/gpuonly/Makefile.test
+++ b/test/Sedov/gpu/variant3/gpuonly/Makefile.test
@@ -43,7 +43,8 @@ SRCS_TEST = \
 FSRCS_TEST = \
 	$(SEDOVGPUV3DIR)/Hydro_interface.F03 \
 	$(SEDOVGPUV3DIR)/Hydro_advanceSolutionHll_3_packet_oacc_C2F.F03 \
-	$(SEDOVGPUV3DIR)/Hydro_advanceSolutionHll_3_packet_oacc.F03
+	$(SEDOVGPUV3DIR)/Hydro_advanceSolutionHll_3_packet_oacc.F03 \
+	$(SEDOVGPUV3DIR)/hy_kernel_3_packet_oacc.F03
 
 CU_SRCS = \
 	$(SRCDIR)/CudaBackend.cu \
