(Issue #43) Redesign high-level interface design so that it is now expected that applications initialize and finalize MPI.  As part of this, the applications now give to the runtime the communicator that it should use.
By doing this, the Logger is now successfully logging all lines again.  Before
it was only logging once the Grid unit initialized MPI.

Implemented with the Sedov/cpu problem only for now.  This ran in 2D and 3D on
GCE without any regressions using the GNU compiler suite.

--- a/sites/gce/Makefile.site.intel
+++ b/sites/gce/Makefile.site.intel
@@ -1,9 +1,9 @@
 BASEDIR      = $(HOME)/Projects/OrchestrationRuntime
-AMREXDIR     = $(RUNTIME_DEP_PATH)/gnu_7.5.0/AMReX_$(NDIM)D
-GTESTDIR     = $(RUNTIME_DEP_PATH)/gnu_7.5.0/googletest
+AMREXDIR     = $(MILHOJA_DEP_PATH)/intel_20.2/AMReX_$(NDIM)D
+GTESTDIR     = $(MILHOJA_DEP_PATH)/intel_20.2/googletest
 CUDADIR      =
 
-CXXCOMPNAME  = gnu
+CXXCOMPNAME  = intel
 CXXCOMP      = mpicxx
 
 CXXFLAGS_PROD    = -O3
@@ -12,7 +12,7 @@ CXXFLAGS_DEBUG   = -g -O0 -DGRID_LOG
 CUCOMP       =
 CUFLAGS_PROD =
 
-LDFLAGS_STD = -lpthread -lstdc++ -lgfortran
+LDFLAGS_STD = -lpthread -lifcore
 
 CXXFLAGS_AMREX   = -I$(AMREXDIR)/include
 CXXFLAGS_GTEST   = -I$(GTESTDIR)/include
@@ -24,12 +24,12 @@ LIB_GTEST        = -lgtest -L$(GTESTDIR)/lib
 LCOV = lcov
 GENHTML = genhtml
 
-CXXFLAGS_COV = -fprofile-arcs -ftest-coverage
-LDFLAGS_COV  = --coverage
+CXXFLAGS_COV = 
+LDFLAGS_COV  = 
 
 # Define flags for OpenMP
 AMREXDIR_OMP  =
-OMP_FLAGS     = -fopenmp
+OMP_FLAGS     = -qopenmp
 CU_OMP_FLAGS  =
 OACC_FLAGS    =
 
