(Issue #43) Put runtime C-interface files into this repo and in their own folder.  Allow library builds to have their own extra flags.  Presently setting -fPIC on a hunch only.
As part of building up the runtime F-interface files, I temporarily refactored
the Tile interface and the TileAmrex implementation.  This was for ease of
debugging only.

Ran the 2D/3D Sedov/cpu problem and see IQs conserved where appropriate.  Ran
2D/3D test problem in Flash-X using libraries created with this content.   Both
ran through and appear to have good results.  Using the CPU only during those
tests.

--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -1,8 +1,9 @@
 SRCDIR       = $(BASEDIR)/src
 INCDIR       = $(BASEDIR)/includes
+INTERFACEDIR = $(BASEDIR)/interfaces
 
-CXXFLAGS_BASE    = -I$(INCDIR)
-CUFLAGS_BASE    = -I$(INCDIR)
+CXXFLAGS_BASE = -I$(INCDIR)
+CUFLAGS_BASE  = -I$(INCDIR)
 
 #TODO: Header files? express dependencies
 
@@ -27,4 +28,7 @@ SRCS_BASE       = \
     $(SRCDIR)/ThreadTeamTerminating.cpp \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
-    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp
+    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
+    $(INTERFACEDIR)/milhoja_runtime_C_interface.cpp \
+    $(INTERFACEDIR)/milhoja_grid_C_interface.cpp \
+    $(INTERFACEDIR)/milhoja_tile_C_interface.cpp
