--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -1,6 +1,5 @@
 SRCDIR       = $(BASEDIR)/src
 INCDIR       = $(BASEDIR)/includes
-INTERFACEDIR = $(BASEDIR)/interfaces
 
 CXXFLAGS_BASE = -I$(INCDIR)
 CUFLAGS_BASE  = -I$(INCDIR)
@@ -28,7 +27,4 @@ SRCS_BASE       = \
     $(SRCDIR)/ThreadTeamTerminating.cpp \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
-    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
-    $(INTERFACEDIR)/milhoja_runtime_C_interface.cpp \
-    $(INTERFACEDIR)/milhoja_grid_C_interface.cpp \
-    $(INTERFACEDIR)/milhoja_tile_C_interface.cpp
+    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp
