--- a/tools/sedov_pypkg/py3_env.yml
+++ b/tools/sedov_pypkg/py3_env.yml
@@ -1,9 +1,10 @@
-name: sedov
+name: milhoja
 dependencies:
   - python=3.9.2
-  - jupyterlab=2.2.6
-  - numpy=1.19.2
-  - pandas=1.2.3
+  - jupyterlab=3.1.7
+  - numpy=1.20.3
+  - pandas=1.3.3
+  - matplotlib=3.3.4
   - yt=3.6.1
   - pip
   - pip:
