The GCE Grid unit test was updated in the Test repo so that it can run now run with the Intel SW stack.  As a result, the script no longer accepts a debug flag, but is configured internally to build debug & production if so desired.  Fingers crossed...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ test_gnu:
  # Build all variants of a single test first and then run all at once
  - cd $MILHOJA_WORK_REPO/gce
  # Unittests
- - ./buildTestGrid.sh        && ./buildTestGrid.sh --debug        && ./testGrid.sh
+ - ./buildTestGrid.sh                                             && ./testGrid.sh
  - ./buildTestThreadTeam.sh  && ./buildTestThreadTeam.sh --debug  && ./testThreadTeam.sh
  - ./buildTestRuntimeNull.sh && ./buildTestRuntimeNull.sh --debug && ./testRuntimeNull.sh
  - ./buildTestRuntimeCpu.sh  && ./buildTestRuntimeCpu.sh --debug  && ./testRuntimeCpu.sh
