Continue divorcing the runtime library from applications.  Writing plotfiles now gets variable names from the calling code, which makes good sense.
Hopefully, this will get the test suite running successfully again on GCE.

--- a/test/Grid/Makefile.test
+++ b/test/Grid/Makefile.test
@@ -14,6 +14,7 @@ LDFLAGS_TEST        = $(LIB_GTEST)
 SRCS_TEST = \
     $(TESTDIR)/runGridTest.cpp \
     $(TESTDIR)/gridUnitTest.cpp \
+    $(TESTBASEDIR)/sim_getVariableNames.cpp \
     $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
     $(TESTBASEDIR)/setInitialConditions.cpp \
     $(TESTDIR)/setInitialInteriorTest.cpp \
