--- a/test/Sedov/cpu/Makefile.test
+++ b/test/Sedov/cpu/Makefile.test
@@ -22,5 +22,6 @@ SRCS_TEST = \
 	$(SEDOVDIR)/hy_updateSolutionHll.cpp \
 	$(SEDOVDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
+	$(SEDOVDIR)/sim_getVariableNames.cpp \
 	$(SEDOVDIR)/Hydro_advanceSolutionHll_tile_cpu.cpp \
 	$(TESTDIR)/sedov_cpu.cpp
