--- a/test/Sedov/gpu/variant3/gpuonly/Makefile.test
+++ b/test/Sedov/gpu/variant3/gpuonly/Makefile.test
@@ -20,6 +20,7 @@ SRCS_TEST = \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
+	$(SEDOVDIR)/sim_getVariableNames.cpp \
 	$(SEDOVDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
 	$(SEDOVDIR)/Eos_idealGammaDensIe.cpp \
     $(SEDOVDIR)/hy_computeFluxesHll.cpp \
