Updated the build system so that users can now specify the runtime backend, the grid backend, and the computation offloading tool.
Made a rough guess at what the GPU-based tests should look like.  This involved
moving out CUDA/OpenACC flags and defines from test makefiles.  Such info is now
managed by the main Makefile in accord with what users request via command line.
This makes good sense, especially since the Sedov/gpu tests could be run with a
different backend - the test designer should not be specifying such info.

These changes are a step in the right direction toward separating the tests from
the library.  However, it is an temporary, intermediate step.  In the end, I
think that they library should have its own build system; the tests, another.

Ran all tests on GCE.  No warnings in build logs.  Manually inspected setup.log
and milhoja.h.  All looks good there as well.

--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -1,7 +1,7 @@
 SRCDIR       = $(BASEDIR)/src
 INCDIR       = $(BASEDIR)/includes
 
-CXXFLAGS_BASE    = -I$(INCDIR)
+CXXFLAGS_BASE   = -I$(INCDIR)
 CUFLAGS_BASE    = -I$(INCDIR)
 
 #TODO: Header files? express dependencies
@@ -28,3 +28,9 @@ SRCS_BASE       = \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
     $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp
+
+CU_SRCS_BASE = \
+	$(SRCDIR)/CudaBackend.cu \
+	$(SRCDIR)/CudaGpuEnvironment.cu \
+	$(SRCDIR)/CudaStreamManager.cu \
+	$(SRCDIR)/CudaMemoryManager.cu
