--- a/test/CudaBackend/Makefile.test
+++ b/test/CudaBackend/Makefile.test
@@ -5,10 +5,10 @@ BINARYNAME          = test_cuda_backend.x
 TESTDIR             = $(BASEDIR)/test/CudaBackend
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CXXFLAGS_TEST_PROD  = -I$(TESTDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CUFLAGS_TEST        = -I$(TESTDIR) $(CUFLAGS_GTEST)                -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-LDFLAGS_TEST        = $(LIB_GTEST) $(OACC_FLAGS)
+CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CUFLAGS_TEST        = -I$(TESTDIR) $(CUFLAGS_GTEST)
+LDFLAGS_TEST        = $(LIB_GTEST)
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
@@ -16,10 +16,6 @@ SRCS_TEST = \
 	$(SRCDIR)/MoverUnpacker.cpp \
 	$(TESTDIR)/runCudaBackendTests.cpp
 
-CU_SRCS = \
-	$(SRCDIR)/CudaBackend.cu \
-	$(SRCDIR)/CudaGpuEnvironment.cu \
-	$(SRCDIR)/CudaStreamManager.cu \
-	$(SRCDIR)/CudaMemoryManager.cu \
+CU_SRCS_TEST = \
 	$(TESTDIR)/testCudaStreamManager.cu
 
