--- a/test/Sedov/gpu/variant3/gpuonly/Makefile.test
+++ b/test/Sedov/gpu/variant3/gpuonly/Makefile.test
@@ -8,10 +8,9 @@ SEDOVGPUV3DIR       = $(BASEDIR)/test/Sedov/gpu/variant3
 TESTDIR             = $(BASEDIR)/test/Sedov/gpu/variant3/gpuonly
 
 # Define compiler flags in CXXFLAGS_TEST_*
-CXXFLAGS_TEST_DEBUG = -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CXXFLAGS_TEST_PROD  = -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CUFLAGS_TEST        = -I$(SEDOVDIR)                                                                -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-LDFLAGS_TEST        = $(OACC_FLAGS)
+CXXFLAGS_TEST_DEBUG = -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR)
+CXXFLAGS_TEST_PROD  = -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR)
+CUFLAGS_TEST        = -I$(SEDOVDIR)
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
@@ -38,9 +37,3 @@ SRCS_TEST = \
 	$(SEDOVGPUV3DIR)/DataPacket_Hydro_gpu_3.cpp \
 	$(SEDOVGPUV3DIR)/Hydro_advanceSolutionHll_packet_oacc_summit_3.cpp \
 	$(TESTDIR)/sedov_gpuonly_3.cpp
-
-CU_SRCS = \
-	$(SRCDIR)/CudaBackend.cu \
-	$(SRCDIR)/CudaGpuEnvironment.cu \
-	$(SRCDIR)/CudaStreamManager.cu \
-	$(SRCDIR)/CudaMemoryManager.cu
