Fixed a logical mistake.  Updated the build system and tests so that all Summit tests pass. This includes all the GPU-based tests.
Ran all tests on Summit.  No warnings in build logs.  Manually inspected setup.log
and milhoja.h.  All looks good there as well.

--- a/test/Runtime/gpu/Makefile.test
+++ b/test/Runtime/gpu/Makefile.test
@@ -7,10 +7,10 @@ TESTDIR             = $(RUNTIMEDIR)/gpu
 TESTBASEDIR         = $(BASEDIR)/test/Base
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CXXFLAGS_TEST_PROD  = -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CUFLAGS_TEST        = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CUFLAGS_GTEST)                             -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-LDFLAGS_TEST        = $(LIB_GTEST) $(OACC_FLAGS)
+CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+CUFLAGS_TEST        = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CUFLAGS_GTEST)
+LDFLAGS_TEST        = $(LIB_GTEST)
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
@@ -38,10 +38,3 @@ SRCS_TEST = \
     $(TESTDIR)/DataPacket_gpu_2_stream.cpp \
     $(RUNTIMEDIR)/testRuntime.cpp \
     $(RUNTIMEDIR)/runRuntimeTests.cpp
-
-CU_SRCS = \
-	$(SRCDIR)/CudaBackend.cu \
-    $(SRCDIR)/CudaGpuEnvironment.cu \
-    $(SRCDIR)/CudaStreamManager.cu \
-    $(SRCDIR)/CudaMemoryManager.cu
-
