--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -7,6 +7,7 @@ CUFLAGS_BASE    = -I$(INCDIR)
 #TODO: Header files? express dependencies
 
 SRCS_BASE       = \
+    $(SRCDIR)/GridConfiguration.cpp \
     $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/GridAmrex.cpp \
     $(SRCDIR)/Grid_IntVect.cpp \
