Updated all the GPU-based tests so that they no work correctly as well. Manually tested each GPU-based test on Summit.  No issues detected.

--- a/test/Sedov/gpu/variant1/Makefile.test
+++ b/test/Sedov/gpu/variant1/Makefile.test
@@ -16,6 +16,7 @@ LDFLAGS_TEST        =
 SRCS_TEST = \
 	$(SRCDIR)/DataPacket.cpp \
 	$(SRCDIR)/MoverUnpacker.cpp \
+	$(SEDOVDIR)/loadGridConfiguration.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
