(Issue #45)) WIP: Start adding in Sphinx-based dev guide.  The idea is that it would be hosted in read the docs.  Just playing around at the moment, but have started adding in requirements and design information generated in support of this issue.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ docs/data\ types.pdf
 docs/GridPolymorphism.pdf
 docs/doxygen/html
 docs/doxygen/latex
+docs/DevGuide/_build
 sites/*/test_threadteam_cpp.x
 sites/*/test_runtime_null_cpp.x
 sites/*/gather_data_cpp.x
@@ -58,6 +59,7 @@ studies/Summit_2020-04-15/gatherDataF2003_*
 studies/Summit_2020-04-15/testRuntimeCpp_*
 studies/Summit_2020-04-15/testThreadTeam_*
 build/*
+tools/sedov_pypkg/.eggs
 tools/sedov_pypkg/Sedov.egg-info/
 tools/sedov_pypkg/dist/
 tools/sedov_pypkg/sedov/__pycache__/
