(Issue #45) GridConfiguration is now abstract and we have an AMReX backend for it.  With this change, I also moved the instantiation of AmrCore up to the instantiation of GridAmrex.  This cleans up the use of config values substantially.
As part of this, the initDomain presently takes no arguments, which is a step in
the opposite direction.

Had to drag the tests along with these interface changes.  Some manual testing
shows no new compilation warnings or regressions.

--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -15,6 +15,7 @@ SRCS_BASE       = \
     $(SRCDIR)/Milhoja_FArray2D.cpp \
     $(SRCDIR)/Milhoja_FArray1D.cpp \
     $(SRCDIR)/Milhoja_GridConfiguration.cpp \
+    $(SRCDIR)/Milhoja_GridConfigurationAMReX.cpp \
     $(SRCDIR)/Milhoja_Grid.cpp \
     $(SRCDIR)/Milhoja_GridAmrex.cpp \
     $(SRCDIR)/Milhoja_AmrCoreAmrex.cpp \
